Sun May 16 21:14:04 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ruby/test_rubyoptions.rb (TestRubyOptions#test_segv_test):
	  fixes "NoMethodError: undefined method `[]=' for nil:NilClass"

Fri May 14 01:17:10 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_core.c (rb_thread_struct): add a field for sigaltstack.

	* thread_pthread.c (thread_start_func_1): initialize machine stack
	  information.

	* thread.c (thread_start_func_2): set sigaltstack for each sub thread.
	  [ruby-core:24540] [ruby-core:30207]

Thu May 13 07:37:49 2010  Tanaka Akira  <akr@fsij.org>

	* ext/sdbm/_sdbm.c: include unistd.h before sdbm.h for off_t.
	  fix compilation problem on FreeBSD 6.4.

Wed May 12 11:39:10 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: test all IPPROTO_* constants for recent Win32
	  SDK.

Tue May 11 23:07:22 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test IPPROTO_IP and IPPROTO_IPV6 constants.

	* ext/socket/mkconstants.rb: define macros for enum.

	  [ruby-dev:38849]

Wed May 12 09:21:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_initialize_m): fix wrong index for the lang
	  option's value 'N'. reported by Masaya TARUI via IRC.

Tue May 11 21:53:18 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rake/test_task_arguments.rb: makes ENV empty during tests
	  because ENV may change the behavior of Rake::TaskArguments.
	  [ruby-core:29984]

Tue May 11 09:57:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (rb_vm_get_sourceline): add prototype.

Tue May 11 09:53:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/psych/parser.c (PSYCH_TRANSCODE): get rid of bare use of gcc
	  extension.

Mon May 10 02:58:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_compile_each), vm_insnhelper.c (vm_invoke_block,
	  vm_throw): allow "return" and "yield" even in singleton class
	  definition.  based on a patch from wanabe <s.wanabe AT gmail.com>
	  for "return".  [ruby-core:21379] [ruby-dev:40975]
