@@ -1,3 +1,7 @@
+Sun May 16 13:55:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* error.c (rb_loaderror): use locale string, not ascii-8bit.
+
 Sun May 16 21:14:04 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* ruby/test_rubyoptions.rb (TestRubyOptions#test_segv_test):
